Issue #13058: ossaudiodev: fix a file descriptor leak on error. Patch by Thomas Jarosch.